Img uploaded and links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Center</h2>
 
         <nav>
-            <a href="">Home</a>
+            <a href="./index.html">Home</a>
             <a href="">About us</a>
             <a href="">Courses</a>
         </nav>
@@ -22,7 +22,7 @@
     <main>
 
         <article>
-            <img src="" alt="">
+            <img src="./img/Assets/learning.png" alt="learning">
             <h4>Library</h4>
             <p>We have tons of engaging and effective
                 learning activities
@@ -30,7 +30,7 @@
         </article>
 
         <article>
-            <img src="" alt="">
+            <img src="./img/Assets/guarantee.png" alt="guarantee">
             <h4>Resources</h4>
             <p>We advocate for education support & tutoring 
                 to guarantee the best results
@@ -38,7 +38,7 @@
         </article>
 
         <article>
-            <img src="" alt="">
+            <img src="./img/Assets/resources.png" alt="resources">
             <h4>Guaranteed Work</h4>
             <p>Educational resources are used to help and assist
                 students in their development and learning
@@ -46,7 +46,7 @@
         </article>
 
         <article>
-            <img src="" alt="">
+            <img src="./img/Assets/library.png" alt="library">
             <h4>Fun Learning</h4>
             <p>The school library is part of our
                 school teaching and learning environment
