--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         <nav>
             <a href="./index.html">Home</a>
-            <a href="">About us</a>
-            <a href="">Courses</a>
+            <a href="./about.html">About us</a>
+            <a href="./couses.html">Courses</a>
         </nav>
 
     </header>
@@ -54,13 +54,13 @@
         </article>
 
         <form action="">
-            <input type="button" value="MORE INFO">
+            <a href="./info.html"><input type="button" value="MORE INFO"></a>
         </form>
 
     </main>
 
     <footer>
-        <p>Images by flatart on Freepik</p>
+        <a href="https://www.freepik.es/" target="_blank"><p>Images by flatart on Freepik</p></a>
         <p>Bernal Rodríguez Carballo</p>
     </footer>
 
