Proyect last version

--- a/index.html
+++ b/index.html
@@ -2,66 +2,73 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
     
     <header>
 
+        <img src="./img/Assets/logo.png" alt="logo" id="logo">
+
         <h2>Center</h2>
 
         <nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About us</a>
-            <a href="./couses.html">Courses</a>
+            <a href="./courses.html">Courses</a>
         </nav>
 
     </header>
 
     <main>
 
-        <article>
+        <section id="learning">
             <img src="./img/Assets/learning.png" alt="learning">
-            <h4>Library</h4>
+            <h4>Fun Learning</h4>
             <p>We have tons of engaging and effective
                 learning activities
             </p>
-        </article>
+        </section>
 
-        <article>
+        <section id="guarantee">
             <img src="./img/Assets/guarantee.png" alt="guarantee">
-            <h4>Resources</h4>
+            <h4>Guaranteed Work</h4>
             <p>We advocate for education support & tutoring 
                 to guarantee the best results
             </p>
-        </article>
+        </section>
 
-        <article>
+        <section id="resources">
             <img src="./img/Assets/resources.png" alt="resources">
-            <h4>Guaranteed Work</h4>
+            <h4>Resources</h4>
             <p>Educational resources are used to help and assist
                 students in their development and learning
             </p>
-        </article>
+        </section>
 
-        <article>
+        <section id="library">
             <img src="./img/Assets/library.png" alt="library">
-            <h4>Fun Learning</h4>
+            <h4>Library</h4>
             <p>The school library is part of our
                 school teaching and learning environment
             </p>
-        </article>
-
-        <form action="">
-            <a href="./info.html"><input type="button" value="MORE INFO"></a>
-        </form>
+        </section>
 
     </main>
 
+        <form action="">
+            <a href="./info.html"><input type="button" value="MORE INFO" id="button"></a>
+        </form>
+
     <footer>
         <a href="https://www.freepik.es/" target="_blank"><p>Images by flatart on Freepik</p></a>
-        <p>Bernal Rodríguez Carballo</p>
+
+<p><span>&#169</span> Bernal Rodríguez Carballo</p>
     </footer>
 
 </body>
